...
                    painter = painterResource(id = R.drawable.figueirarubaiyat),
                    contentDescription = null,
                    modifier = Modifier.fillMaxWidth()

                )
                Text(
                    text = "Restaurantes", textAlign = TextAlign.Center, style =
                    TextStyle(
                        color = Color.White,
                        fontSize = 27.sp,
                        fontWeight = FontWeight.ExtraBold,
                        shadow = Shadow()
                    )
...
                    painter = painterResource(id = R.drawable.parqvillalobos),
                    contentDescription = null,
                    modifier = Modifier.fillMaxWidth()

                )
                Text(
                    text = "Parques", textAlign = TextAlign.Center, style =
                    TextStyle(
                        color = Color.White,
                        fontSize = 27.sp,
                        fontWeight = FontWeight.ExtraBold,
                        shadow = Shadow()
                    )
...
